--- a/kis_npkb/general/templates/general/base.html
+++ b/kis_npkb/general/templates/general/base.html
@@ -5,6 +5,17 @@
 {% block 'content' %}
 {% endblock %}
 
+{% block 'detail' %}
+{% endblock %}
+
+{% block 'deputy' %}
+{% endblock %}
+
+{% block 'competence' %}
+{% endblock %}
+
+{% block 'skill' %}
+{% endblock %}
 
 {% include 'general/footer.html' %}
 
