--- a/kis_npkb/employees/templates/employees/employee_detail.html
+++ b/kis_npkb/employees/templates/employees/employee_detail.html
@@ -1,13 +1,12 @@
 {% load static %}
 
 {% block 'content' %}
-<div class="col">
+<div class="col detail" data-employeeid="{{ object.id }}">
         <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3">
               <img class="w-100 img-fluid" src="{{ object.photo.url }}" alt="{{ object.full_name }}">
             </div>
           <div class="card-body">
-              <h1 class="card-title pricing-card-title">{{ object.full_name }}</h1>
               <ul class="list-unstyled mt-3 mb-4">
                   <li>{{ object.full_name }}</li>
                   <li>{{ object.post }}</li>
