--- a/kis_npkb/employees/templates/employees/employee_list.html
+++ b/kis_npkb/employees/templates/employees/employee_list.html
@@ -5,9 +5,9 @@
 
 {% block 'content' %}
 <script src="{% static 'general/js/main.js' %}"></script>
-
-<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary" style="width: 380px;">
-    <div class="mb-5">
+<div class="d-flex flex-row flex-wrap align-items-start">
+<div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary ms-5" style="max-width: 380px; height: 100%;">
+    <div class="mt-3 mx-3">
         <form method="get">
             <table>
                 {{ sort_filter_form|crispy }}
@@ -15,36 +15,31 @@
             <button>Показать</button>
         </form>
     </div>
-
     {% for object in form_employee %}
-
     <div class="employee-list pointer d-flex align-items-center flex-shrink-0 p-3 link-body-emphasis text-decoration-none border-bottom" data-employeeid="{{ object.id }}">
           <svg class="bi pe-none me-2" width="30" height="24"><use xlink:href="#bootstrap"/></svg>
           <span class="fs-5 fw-semibold">{{ object.full_name }}</span>
     </div>
-
     {% endfor %}
-  </div>
-
-<div id="employee-info" data-employeeid="{{ object.id }}">
-
 </div>
 
-<div class="">
+<div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 px-5" data-employeeid="{{ object.id }}"></div>
+
+<div class="d-flex flex-column">
 
     <div class="buttons">
 
-        <button name="competence-button" class="competence-button">Компетенции</button>
-        <button name="skill-button" class="skill-button">Навыки</button>
-
-        <div id="skill-or-competence-list">
-
-        </div>
+        <button name="competence-button" class="competence-button btn btn-info">Компетенции</button>
+        <button name="skill-button" class="skill-button btn btn-info">Навыки</button>
     </div>
+    <div id="skill-or-competence-list" class="d-flex flex-column mt-3"></div>
+
+</div>
 
 </div>
 
 <div id="employee-list-by-competence-or-skill"></div>
+
 
 
 <script>
