--- a/kis_npkb/employees/templates/employees/employees_by_competence.html
+++ b/kis_npkb/employees/templates/employees/employees_by_competence.html
@@ -1,3 +1,3 @@
 {% for employee in employees_by_competence %}
-<p><a href="{{ employee.get_absolute_url }}">{{ employee }}</a> </p>
+<p class="rounded-3"><a href="{{ employee.get_absolute_url }}">{{ employee }}</a> </p>
 {% endfor %}
