--- a/kis_npkb/employees/templates/employees/skill_for_employee.html
+++ b/kis_npkb/employees/templates/employees/skill_for_employee.html
@@ -11,6 +11,6 @@
                             {% elif object.skill_level == 4 %}
                                 {{ 'green' }}
                             {% endif %}" data-skill-id="{{ object.skill.id }}"
-   onclick="showDeputiesBySkill({{ object.skill.id }})"> {{ object.skill.name }} </p>
+   onclick="showDeputiesBySkill({{ object.skill.id }}, {{ object.employee.id }})"> {{ object.skill.name }} </p>
 
 {% endfor %}
