--- a/kis_npkb/employees/templates/employees/employee_list.html
+++ b/kis_npkb/employees/templates/employees/employee_list.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 
-<div id="employee-list-by-competence-or-skill" class="d-flex flex-row justify-content-center"></div>
+<div id="employee-list-by-competence-or-skill" class="d-flex flex-row justify-content-center mt-3"></div>
 
 
 
