--- a/kis_npkb/employees/templates/employees/employee_list.html
+++ b/kis_npkb/employees/templates/employees/employee_list.html
@@ -4,9 +4,10 @@
 
 
 {% block 'content' %}
+
 <script src="{% static 'general/js/main.js' %}"></script>
-<div class="d-flex flex-row flex-wrap">
-    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary ms-5" style="min-width: 30%; max-height: 100%;" >
+<div class="d-flex flex-row flex-wrap mt-3 w-100">
+    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary ms-5 mt-3" style="min-width: 30%; height: 40%; margin-bottom: 2vh;" >
         <div class="mt-3 mx-3">
             <form method="get">
                 <table>
@@ -15,7 +16,8 @@
                 <button>Показать</button>
             </form>
         </div>
-        <div class="d-flex flex-column align-items-center flex-shrink-0 overflow-auto text-align-center">
+
+        <div class="d-flex flex-column align-items-center flex-shrink-0 overflow-auto text-align-center mt-3" style="overflow-y: scroll; height: 28vh;">
             {% for object in form_employee %}
             <div class="employee-list pointer p-3 link-body-emphasis border-bottom" data-employeeid="{{ object.id }}">
                 <span class="fs-5 fw-semibold">{{ object.full_name }}</span>
@@ -24,18 +26,19 @@
         </div>
     </div>
 
-    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 px-5" data-employeeid="{{ object.id }}"></div>
+    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 px-5 mt-3" data-employeeid="{{ object.id }}"></div>
 
-    <div class="d-flex flex-column align-items-center align-content-center ms-5" style="min-width: 25%">
+    <div class="d-flex flex-column align-items-center align-content-center ms-5 px-5 mt-3" style="min-width: 25%">
         <div class="buttons d-flex flex-row justify-content-center align-items-start">
             <button name="competence-button" class="competence-button btn btn-info ms-3 visually-hidden">Компетенции</button>
             <button name="skill-button" class="skill-button btn btn-info ms-3 visually-hidden">Навыки</button>
         </div>
         <div id="skill-or-competence-list" class="d-flex flex-column justify-content-center flex-shrink-0 align-items-stretch align-content-center mt-3" style="min-width: 100%; text-align:center"></div>
     </div>
+    <div id="employee-list-by-competence-or-skill" class="d-flex flex-row justify-content-center mt-3"></div>
 </div>
 
-<div id="employee-list-by-competence-or-skill" class="d-flex flex-row justify-content-center mt-3"></div>
+
 
 
 
