--- a/kis_npkb/employees/templates/employees/employees_by_skill.html
+++ b/kis_npkb/employees/templates/employees/employees_by_skill.html
@@ -1,10 +1,10 @@
 {% for employee in employees_by_skill %}
 
 
-<div class="card rounded-3 shadow-sm border-0">
+<div class="card rounded-3 shadow-sm border-0 ms-5 me-1">
 
     <div class="card-header bg-transparent border-0 d-flex justify-content-center">
-        <img class="w-90 img-fluid rounded-3" src="{{ employee.photo.url }}" alt="{{ employee.full_name }}">
+        <img class="w-50 img-fluid rounded-3" src="{{ employee.photo.url }}" alt="{{ employee.full_name }}">
     </div>
 
     <div class="card-body">
