--- a/kis_npkb/employees/templates/employees/employee_list.html
+++ b/kis_npkb/employees/templates/employees/employee_list.html
@@ -9,7 +9,7 @@
 <div class="d-flex flex-row flex-wrap mt-3 w-100">
     <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary ms-5 mt-3" style="min-width: 30%; height: 40%; margin-bottom: 2vh;" >
         <div class="mt-3 mx-3">
-            <form method="get">
+            <form>
                 <table>
                 {{ sort_filter_form|crispy }}
                 </table>
@@ -26,16 +26,16 @@
         </div>
     </div>
 
-    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 px-5 mt-3" data-employeeid="{{ object.id }}"></div>
+    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 mt-3" data-employeeid="{{ object.id }}"></div>
 
-    <div class="d-flex flex-column align-items-center align-content-center ms-5 px-5 mt-3" style="min-width: 25%">
+    <div class="d-flex flex-column align-items-center align-content-center ms-5 mt-3">
         <div class="buttons d-flex flex-row justify-content-center align-items-start">
             <button name="competence-button" class="competence-button btn btn-info ms-3 visually-hidden">Компетенции</button>
             <button name="skill-button" class="skill-button btn btn-info ms-3 visually-hidden">Навыки</button>
         </div>
-        <div id="skill-or-competence-list" class="d-flex flex-column justify-content-center flex-shrink-0 align-items-stretch align-content-center mt-3" style="min-width: 100%; text-align:center"></div>
+        <div id="skill-or-competence-list" class="d-flex flex-column justify-content-center flex-shrink-0 align-items-stretch mt-3" style="text-align:center"></div>
     </div>
-    <div id="employee-list-by-competence-or-skill" class="d-flex flex-row justify-content-center mt-3"></div>
+    <div id="employee-list-by-competence-or-skill" class="d-flex flex-row flex-wrap justify-content-center mt-3"></div>
 </div>
 
 
