--- a/kis_npkb/employees/templates/employees/employee_detail.html
+++ b/kis_npkb/employees/templates/employees/employee_detail.html
@@ -4,7 +4,7 @@
 <div class="detail" data-employeeid="{{ object.id }}">
     <div class="card rounded-3 shadow-sm border-0">
         <div class="card-header bg-transparent border-0 d-flex justify-content-center">
-            <img class="w-75 h-90 img-fluid rounded-3" src="{{ object.photo.url }}" alt="{{ object.full_name }}">
+            <img class="img-fluid rounded-3" src="{{ object.photo.url }}" alt="{{ object.full_name }}">
         </div>
         <div class="card-body">
             <ul class="list-group list-group-flush">
