--- a/kis_npkb/employees/templates/employees/employee_list.html
+++ b/kis_npkb/employees/templates/employees/employee_list.html
@@ -7,7 +7,7 @@
 
 <script src="{% static 'general/js/main.js' %}"></script>
 <div class="d-flex flex-row flex-wrap mt-3 w-100">
-    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary ms-5 mt-3" style="min-width: 30%; height: 40%; margin-bottom: 2vh;" >
+    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary mx-5 mt-3" style="min-width: 30%; height: 40%; margin-bottom: 2vh;" >
         <div class="mt-3 mx-3">
             <form>
                 <table>
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 mt-3" data-employeeid="{{ object.id }}"></div>
+    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 mt-3 ms-5" data-employeeid="{{ object.id }}"></div>
 
     <div class="d-flex flex-column align-items-center align-content-center ms-5 mt-3">
         <div class="buttons d-flex flex-row justify-content-center align-items-start">
@@ -35,7 +35,7 @@
         </div>
         <div id="skill-or-competence-list" class="d-flex flex-column justify-content-center flex-shrink-0 align-items-stretch mt-3" style="text-align:center"></div>
     </div>
-    <div id="employee-list-by-competence-or-skill" class="d-flex flex-row flex-wrap justify-content-center mt-3"></div>
+    <div id="employee-list-by-competence-or-skill" class="d-flex flex-row flex-wrap justify-content-center mt-3" style="width: 100%;"></div>
 </div>
 
 
