--- a/kis_npkb/skills/templates/skills/employees_by_skill_table.html
+++ b/kis_npkb/skills/templates/skills/employees_by_skill_table.html
@@ -1,9 +1,7 @@
-<div class="d-flex flex-column justify-content-center">
-<h2 class="text-center d-flex flex-row justify-content-center">Навыком {{ skill.skill.name }} Обладают:</h2>
-
-<div class="d-flex flex-row flex-wrap justify-content-center mt-3">
 {% for employee in employees_by_skill %}
-<div class="card rounded-3 shadow-sm border-0 ms-5 me-1">
+
+
+<div class="card rounded-3 shadow-sm border-0 mx-5 mb-3">
 
     <div class="card-header bg-transparent border-0 d-flex justify-content-center">
         <img class="img-fluid rounded-3" src="{{ employee.photo.url }}" alt="{{ employee.full_name }}">
@@ -19,10 +17,8 @@
     </div>
 
     <div class="buttons d-flex flex-column mx-3 mb-3">
-        <button name="card" class="btn btn-info mt-3" onclick="showEmployeeDetail({{ employee.id }})">Карточка</button>
+        <button name="card" class="btn btn-info mt-3" href="#">Карточка</button>
     </div>
 </div>
-    {% endfor %}
-</div>
-</div>
 
+{% endfor %}
