--- a/kis_npkb/skills/templates/skills/skill_list.html
+++ b/kis_npkb/skills/templates/skills/skill_list.html
@@ -1,6 +1,7 @@
 {% extends 'general/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load skills %}
 
 
 {% block 'content' %}
@@ -17,63 +18,73 @@
 <div class="d-flex flex-column align-items-center flex-shrink-0 bg-body-tertiary w-100">
     {% if object_list %}
         {% for a_group in grouped_empskill_list %}
-        <h3>{{ a_group.0.sector.name }} СЕКТОР</h3>
-        <h4>МАТРИЦА НАВЫКОВ</h4>
-        <div class="d-flex flex-wrap ">
+            <h3>{{ a_group.0.sector.name }} СЕКТОР</h3>
+            <h4>МАТРИЦА НАВЫКОВ</h4>
+            <div class="d-flex flex-wrap ">
 
-            <figure class="figure" style="background-color: green; height: 20px; width: 20px;"></figure>
-            <p class="ms-2 me-4">Прошел полную подготовку</p>
+                <figure class="figure" style="background-color: green; height: 20px; width: 20px;"></figure>
+                <p class="ms-2 me-4">Прошел полную подготовку</p>
 
-            <figure class="figure" style="background-color: lime; height: 20px; width: 20px;"></figure>
-            <p class="ms-2 me-4">Самостоятельно выполняет работу</p>
+                <figure class="figure" style="background-color: lime; height: 20px; width: 20px;"></figure>
+                <p class="ms-2 me-4">Самостоятельно выполняет работу</p>
 
-            <figure class="figure" style="background-color: yellow; height: 20px; width: 20px;"></figure>
-            <p class="ms-2 me-4">Работает под наблюдением наставника</p>
+                <figure class="figure" style="background-color: yellow; height: 20px; width: 20px;"></figure>
+                <p class="ms-2 me-4">Работает под наблюдением наставника</p>
 
-            <figure class="figure" style="background-color: orange; height: 20px; width: 20px;"></figure>
-            <p class="ms-2 me-4">Владеет теорией</p>
+                <figure class="figure" style="background-color: orange; height: 20px; width: 20px;"></figure>
+                <p class="ms-2 me-4">Владеет теорией</p>
 
-            <figure class="figure" style="background-color: red; height: 20px; width: 20px;"></figure>
-            <p class="ms-2 me-4">Не имеет навыка</p>
+                <figure class="figure" style="background-color: red; height: 20px; width: 20px;"></figure>
+                <p class="ms-2 me-4">Не имеет навыка</p>
 
-        </div>
-        <div class="table-responsive w-75">
-            <table class="table table-striped table-sm">
-                <thead>
-                    <tr>
-                        <th></th>
-
-                            {% for empskill in a_group.0.empskill_set.all %}
-                                <th scope="col">{{ empskill.skill.name }}</th>
-                            {% endfor %}
-
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for empskill in a_group.0.empskill_set.all %}
+            </div>
+            <div class="table-responsive w-75">
+                <table class="table table-striped table-sm">
+                    <thead>
                         <tr>
-                            <td>{{ empskill.employee.full_name }}, {{ empskill.employee.post }}</td>
-                            {% for empskills in a_group.0.empskill_set.all %}
-                                <td class="font-weight-bold" style="background-color: {% if not empskills.skill_level %}
-                                {{ 'red' }}
-                            {% elif empskills.skill_level == 1 %}
-                                {{ 'orange' }}
-                            {% elif empskills.skill_level == 2 %}
-                                {{ 'yellow' }}
-                            {% elif empskills.skill_level == 3 %}
-                                {{ 'lime' }}
-                            {% elif empskills.skill_level == 4 %}
-                                {{ 'green' }}
-                            {% endif %}">{% if not empskills.skill_level %} 0 {% else %} {{ empskills.skill_level }} {% endif %}</td>
-                            {% endfor %}
+                            <th></th>
+
+                                {% for empskill in a_group.0.empskill_set.all.distinct %}
+                                    <th scope="col">{{ empskill.skill.name }}</th>
+                                {% endfor %}
+
                         </tr>
+                    </thead>
+                    <tbody>
+                    {% for empskill in a_group.0.empskill_set.all %}
+                        {% get_skill_table empskill.employee.id %}
                     {% endfor %}
-                </tbody>
-            </table>
-            <hr class="hr hr-blurry w-100 mt-5 mb-5"/>
-        </div>
+                    </tbody>
+                </table>
+                <hr class="hr hr-blurry w-100 mt-5 mb-5"/>
+            </div>
         {% endfor %}
     {% endif %}
 </div>
 
 {% endblock %}
+
+{% comment %}
+{% for empskill in a_group.0.empskill_set.all.distinct %}
+                            <tr>
+                                <td>{{ empskill.employee.full_name }}, {{ empskill.employee.post }}</td>
+
+
+
+
+                                {% for empskills in get_skill_table %}
+                                    <td class="font-weight-bold" style="background-color: {% if not empskills.skill_level %}
+                                    {{ 'red' }}
+                                    {% elif empskills.skill_level == 1 %}
+                                        {{ 'orange' }}
+                                    {% elif empskills.skill_level == 2 %}
+                                        {{ 'yellow' }}
+                                    {% elif empskills.skill_level == 3 %}
+                                        {{ 'lime' }}
+                                    {% elif empskills.skill_level == 4 %}
+                                        {{ 'green' }}
+                                    {% endif %}">{% if not empskills.skill_level %} 0 {% else %} {{ empskills.skill_level }} {% endif %}</td>
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+{% endcomment %}
