--- a/kis_npkb/competences/templates/competences/competences_table_list.html
+++ b/kis_npkb/competences/templates/competences/competences_table_list.html
@@ -8,10 +8,8 @@
 <script src="{% static 'general/js/main.js' %}"></script>
 <div class="mt-3 mx-3 d-flex flex-row justify-content-center">
     <form>
-        <table>
         {{ sort_filter_form|crispy }}
-        </table>
-        <button>Показать</button>
+        <button class="btn btn-info">Показать</button>
     </form>
 </div>
 
