--- a/kis_npkb/employees/templates/employees/employee_list.html
+++ b/kis_npkb/employees/templates/employees/employee_list.html
@@ -8,18 +8,17 @@
 <script src="{% static 'general/js/main.js' %}"></script>
 <div class="d-flex flex-row flex-wrap mt-3 w-100">
     <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary mx-5 mt-3" style="min-width: 30%; height: 40%; margin-bottom: 2vh;" >
+        <span class="fs-3 fw-semibold text-center mt-3">Поиск сотрудников</span>
         <div class="mt-3 mx-3">
             <form>
-                <table>
                 {{ sort_filter_form|crispy }}
-                </table>
-                <button>Показать</button>
+                <button class="btn btn-info">Показать</button>
             </form>
         </div>
 
         <div class="d-flex flex-column align-items-center flex-shrink-0 overflow-auto text-align-center mt-3" style="overflow-y: scroll; height: 28vh;">
             {% for object in form_employee %}
-            <div class="employee-list pointer p-3 link-body-emphasis border-bottom" data-employeeid="{{ object.id }}">
+            <div class="employee-list pointer p-3 link-body-emphasis border-bottom" data-employeeid="{{ object.id }}" style="{% if object.fired %} {{ 'background-color: #FFB0D4;' }} {% endif %}">
                 <span class="fs-5 fw-semibold">{{ object.full_name }}</span>
             </div>
             {% endfor %}
