--- a/kis_npkb/employees/templates/employees/employees_by_competence.html
+++ b/kis_npkb/employees/templates/employees/employees_by_competence.html
@@ -1,3 +1,7 @@
+<div class="d-flex flex-column justify-content-center mb-3">
+<h2 class="text-center d-flex flex-row justify-content-center">По компетенции {{ competence.competence.name }} сотрудника замещают: </h2>
+
+<div class="d-flex flex-row flex-wrap justify-content-center mt-3">
 {% for employee in employees_by_competence %}
 
 <div class="card rounded-3 shadow-sm border-0 ms-5 me-1">
