--- a/kis_npkb/employees/templates/employees/employees_by_skill.html
+++ b/kis_npkb/employees/templates/employees/employees_by_skill.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column justify-content-center">
+<div class="d-flex flex-column justify-content-center mb-3">
 <h2 class="text-center d-flex flex-row justify-content-center">Навыком {{ skill.skill.name }} Обладают:</h2>
 
 <div class="d-flex flex-row flex-wrap justify-content-center mt-3">
