--- a/kis_npkb/skills/templates/skills/skill_list.html
+++ b/kis_npkb/skills/templates/skills/skill_list.html
@@ -8,10 +8,8 @@
 <div class="d-flex flex-column align-items-center flex-shrink-0 bg-body-tertiary" style="min-width:380px;">
     <div class="mb-5">
         <form method="get">
-            <table>
                 {{ sort_filter_form|crispy }}
-            </table>
-            <button>Показать</button>
+            <button class="btn btn-info">Показать</button>
         </form>
     </div>
 </div>
@@ -22,7 +20,7 @@
             <h4>МАТРИЦА НАВЫКОВ</h4>
             <div class="d-flex flex-wrap ">
 
-                <figure class="figure" style="background-color: green; height: 20px; width: 20px;"></figure>
+                <figure class="figure" style="background-color: #17a917; height: 20px; width: 20px;"></figure>
                 <p class="ms-2 me-4">Прошел полную подготовку</p>
 
                 <figure class="figure" style="background-color: lime; height: 20px; width: 20px;"></figure>
@@ -39,20 +37,11 @@
 
             </div>
             <div class="table-responsive w-75">
-                <table class="table table-striped table-sm">
-                    <thead>
-                        <tr>
-                            <th></th>
-
-                                {% for empskill in a_group.0.empskill_set.all.distinct %}
-                                    <th scope="col">{{ empskill.skill.name }}</th>
-                                {% endfor %}
-
-                        </tr>
-                    </thead>
+                <table class="table table-bordered table-sm text-center align-middle">
+                    {% handle_group a_group.0 %}
                     <tbody>
-                    {% for empskill in a_group.0.empskill_set.all %}
-                        {% get_skill_table empskill.employee.id %}
+                    {% for employee in a_group %}
+                        <tr><td class="table-primary">{{ employee.full_name }}, {{ employee.post }}</td>{% get_skills employee %}<tr>
                     {% endfor %}
                     </tbody>
                 </table>
@@ -64,27 +53,3 @@
 
 {% endblock %}
 
-{% comment %}
-{% for empskill in a_group.0.empskill_set.all.distinct %}
-                            <tr>
-                                <td>{{ empskill.employee.full_name }}, {{ empskill.employee.post }}</td>
-
-
-
-
-                                {% for empskills in get_skill_table %}
-                                    <td class="font-weight-bold" style="background-color: {% if not empskills.skill_level %}
-                                    {{ 'red' }}
-                                    {% elif empskills.skill_level == 1 %}
-                                        {{ 'orange' }}
-                                    {% elif empskills.skill_level == 2 %}
-                                        {{ 'yellow' }}
-                                    {% elif empskills.skill_level == 3 %}
-                                        {{ 'lime' }}
-                                    {% elif empskills.skill_level == 4 %}
-                                        {{ 'green' }}
-                                    {% endif %}">{% if not empskills.skill_level %} 0 {% else %} {{ empskills.skill_level }} {% endif %}</td>
-                                {% endfor %}
-                            </tr>
-                        {% endfor %}
-{% endcomment %}
