--- a/kis_npkb/general/templates/general/footer.html
+++ b/kis_npkb/general/templates/general/footer.html
@@ -1,9 +1,8 @@
 {% load static %}
 
 </main>
-<div class="b-example-divider"></div>
-  <footer class="footer mt-auto py-3 bg-body-tertiary">
-    <marquee></marquee>
+  <footer class="footer mt-auto py-3">
+    <marquee class="headercolor text-white fw-semibold">Уважаемые начальники отделов и секторов, проверьте, пожалуйста, актуальность компетенций своих сотрудников!</marquee>
   </footer>
 <script src="{% static 'general/js/bootstrap.bundle.min.js' %}"></script>
 </body>
