--- a/kis_npkb/competences/templates/competences/competences_table_list.html
+++ b/kis_npkb/competences/templates/competences/competences_table_list.html
@@ -6,23 +6,25 @@
 {% block 'content' %}
 
 <script src="{% static 'general/js/main.js' %}"></script>
-<div class="mt-3 mx-3 d-flex flex-row justify-content-center">
-    <form>
+
+<div class="mt-3 mx-3 d-flex flex-row justify-content-center text-center">
+    <form class="itemcolor borderall rounded-3 p-3">
         {{ sort_filter_form|crispy }}
         <button class="btn btn-info">Показать</button>
     </form>
 </div>
-
+<div class="secondarycolor">
     <div class="d-flex flex-row flex-wrap align-items-stretch flex-shrink-0 mt-3" style="min-width: 25%; height: 40%; margin-bottom: 2vh;" >
         <div class="mx-5 mb-3">
-            <div class="d-flex flex-column align-items-center flex-shrink-0 overflow-auto text-align-center mt-3 bg-body-tertiary" style="overflow-y: scroll; height: 56vh; max-width: 100%;">
+            <div class="d-flex flex-column align-items-center flex-shrink-0 overflow-auto text-align-center mt-3 itemcolor borderall rounded-3" style="overflow-y: scroll; height: 56vh; max-width: 100%;">
                 {% for object in object_list %}
-                    <span class="fs-5 fw-semibold pointer p-3 link-body-emphasis border-bottom" onclick="showEmployeesByCompetence({{ object.competence.id }}, {{ object.sector.id }})">{{ object.competence.name }}</span>
+                    <span class="fs-5 fw-semibold pointer p-3 link-body-emphasis borderbottom" onclick="showEmployeesByCompetence({{ object.competence.id }}, {{ object.sector.id }})">{{ object.competence.name }}</span>
                 {% endfor %}
             </div>
         </div>
 
     <div id="employee-list-by-competence" class="d-flex flex-row flex-wrap justify-content-center mt-3"></div>
+</div>
 </div>
 
 {% endblock %}
