--- a/kis_npkb/employees/templates/employees/employee_list.html
+++ b/kis_npkb/employees/templates/employees/employee_list.html
@@ -6,10 +6,10 @@
 {% block 'content' %}
 
 <script src="{% static 'general/js/main.js' %}"></script>
-<div class="d-flex flex-row flex-wrap mt-3 w-100">
-    <div class="d-flex flex-column align-items-stretch flex-shrink-0 bg-body-tertiary mx-5 mt-3" style="min-width: 30%; height: 40%; margin-bottom: 2vh;" >
+<div class="d-flex flex-row flex-wrap mt-3 w-100 secondarycolor">
+    <div class="d-flex flex-column align-items-stretch flex-shrink-0 mx-5 mt-3 itemcolor borderall rounded-3" style="max-width: 90%; height: 40%; margin-bottom: 2vh;">
         <span class="fs-3 fw-semibold text-center mt-3">Поиск сотрудников</span>
-        <div class="mt-3 mx-3">
+        <div class="mt-3 mx-5">
             <form>
                 {{ sort_filter_form|crispy }}
                 <button class="btn btn-info">Показать</button>
@@ -18,14 +18,14 @@
 
         <div class="d-flex flex-column align-items-center flex-shrink-0 overflow-auto text-align-center mt-3" style="overflow-y: scroll; height: 28vh;">
             {% for object in form_employee %}
-            <div class="employee-list pointer p-3 link-body-emphasis border-bottom" data-employeeid="{{ object.id }}" style="{% if object.fired %} {{ 'background-color: #FFB0D4;' }} {% endif %}">
+            <div class="employee-list pointer p-3 link-body-emphasis borderbottom" data-employeeid="{{ object.id }}" style=" {% if object.fired %} {{ 'background-color: #FFB0D4;' }} {% endif %}">
                 <span class="fs-5 fw-semibold">{{ object.full_name }}</span>
             </div>
             {% endfor %}
         </div>
     </div>
 
-    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 mt-3 ms-5" data-employeeid="{{ object.id }}"></div>
+    <div id="employee-info" class="d-flex flex-column align-items-center flex-shrink-0 mt-3 ms-5" tabindex="0" data-employeeid="{{ object.id }}"></div>
 
     <div class="d-flex flex-column align-items-center align-content-center ms-5 mt-3">
         <div class="buttons d-flex flex-row justify-content-center align-items-start">
@@ -34,7 +34,7 @@
         </div>
         <div id="skill-or-competence-list" class="d-flex flex-column justify-content-center flex-shrink-0 align-items-stretch mt-3" style="text-align:center"></div>
     </div>
-    <div id="employee-list-by-competence-or-skill" class="d-flex flex-row flex-wrap justify-content-center mt-3" style="width: 100%;"></div>
+    <div id="employee-list-by-competence-or-skill" class="d-flex flex-row flex-wrap justify-content-center mt-3" tabindex="0" style="width: 100%;"></div>
 </div>
 
 
@@ -42,6 +42,8 @@
 
 
 <script src="{% static 'general/js/addEventListeners.js' %}"></script>
+
+<script type="text/javascript">showEmployeeByRedirect();</script>
 
 
 {% endblock %}
