--- a/kis_npkb/skills/templates/skills/employees_by_skill_table.html
+++ b/kis_npkb/skills/templates/skills/employees_by_skill_table.html
@@ -1,23 +1,23 @@
 {% for employee in employees_by_skill %}
 
 
-<div class="card rounded-3 shadow-sm border-0 mx-5 mb-3">
+<div class="card rounded-3 shadow-sm mx-5 mb-3 borderall itemcolor">
 
-    <div class="card-header bg-transparent border-0 d-flex justify-content-center">
+    <div class="card-header border-0 d-flex justify-content-center">
         <img class="img-fluid rounded-3" src="{{ employee.photo.url }}" alt="{{ employee.full_name }}">
     </div>
 
-    <div class="card-body">
-        <ul class="list-group list-group-flush">
-            <li class="list-group-item fs-4">{{ employee.full_name }}</li>
-            <li class="list-group-item fs-6">{{ employee.post }}</li>
-            <li class="list-group-item fs-6">{{ employee.sector.department }}</li>
-            <li class="list-group-item fs-6">{{ employee.phone }}</li>
+    <div class="card-body text-center">
+        <ul class="list-group border-0">
+            <li class="list-group-item fs-4 itemcolor borderbottom fw-semibold">{{ employee.full_name }}</li>
+            <li class="list-group-item fs-6 itemcolor borderbottom">{{ employee.post }}</li>
+            <li class="list-group-item fs-6 itemcolor borderbottom">{{ employee.sector.department }}</li>
+            <li class="list-group-item fs-6 itemcolor borderbottom">Доб. номер: {{ employee.phone }}</li>
         </ul>
     </div>
 
-    <div class="buttons d-flex flex-column mx-3 mb-3">
-        <button name="card" class="btn btn-info mt-3" href="#">Карточка</button>
+    <div class="button-group d-flex flex-column mx-3 mb-3">
+        <button name="card" class="btn btn-primary mt-3" onclick="showEmployee({% url 'employee-list' %}, {{ employee.id }})">Карточка</button>
     </div>
 </div>
 
