--- a/kis_npkb/skills/templates/skills/skill_list.html
+++ b/kis_npkb/skills/templates/skills/skill_list.html
@@ -5,20 +5,20 @@
 
 
 {% block 'content' %}
-<div class="d-flex flex-column align-items-center flex-shrink-0 bg-body-tertiary" style="min-width:380px;">
+<div class="d-flex flex-column align-items-center flex-shrink-0" style="min-width:380px;">
     <div class="mb-5">
-        <form method="get">
-                {{ sort_filter_form|crispy }}
+        <form class="itemcolor borderall rounded-3 p-3">
+            {{ sort_filter_form|crispy }}
             <button class="btn btn-info">Показать</button>
         </form>
     </div>
 </div>
-<div class="d-flex flex-column align-items-center flex-shrink-0 bg-body-tertiary w-100">
+<div class="d-flex flex-column align-items-center flex-shrink-0 w-100">
     {% if object_list %}
         {% for a_group in grouped_empskill_list %}
             <h3>{{ a_group.0.sector.name }} СЕКТОР</h3>
             <h4>МАТРИЦА НАВЫКОВ</h4>
-            <div class="d-flex flex-wrap ">
+            <div class="d-flex flex-wrap mx-5">
 
                 <figure class="figure" style="background-color: #17a917; height: 20px; width: 20px;"></figure>
                 <p class="ms-2 me-4">Прошел полную подготовку</p>
@@ -36,8 +36,8 @@
                 <p class="ms-2 me-4">Не имеет навыка</p>
 
             </div>
-            <div class="table-responsive w-75">
-                <table class="table table-bordered table-sm text-center align-middle">
+            <div class="table-responsive w-75 borderbottom my-3">
+                <table class="table table-bordered table-sm text-center align-middle rounded-3">
                     {% handle_group a_group.0 %}
                     <tbody>
                     {% for employee in a_group %}
@@ -45,7 +45,6 @@
                     {% endfor %}
                     </tbody>
                 </table>
-                <hr class="hr hr-blurry w-100 mt-5 mb-5"/>
             </div>
         {% endfor %}
     {% endif %}
