--- a/kis_npkb/general/templates/general/header.html
+++ b/kis_npkb/general/templates/general/header.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>123</title>
+        <title>КИС НПКБ</title>
         <link rel="canonical" href="index.html">
         <link rel="stylesheet" href="{% static 'general/css/bootstrap.min.css' %}">
         <link href="{% static 'general/css/style.css' %}" rel="stylesheet">
@@ -103,3 +103,4 @@
             </ul>
         </header>
     <main>
+
